# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

ohos_shared_library("distributed_audio_manager_sink") {
  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//third_party/json/include",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "${fwk_common_path}/utils/include",
    "${mediastandardfwk_path}/audiocapturer/include",
    "${mediastandardfwk_path}/audiorenderer/include",
    "${mediastandardfwk_path}/audiocommon/include",
    "${mediastandardfwk_path}/audiomanager/include",
    "${audio_framework_path}/audiopolicy/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${innerkits_path}/native_cpp/audio_source/include",
    "${audio_control_path}/controlsink/include",
    "${audio_client_path}/micclient/include",
    "${audio_client_path}/spkclient/include",
    "${services_path}/common/taskProcessor/include",
    "${services_path}/common/audioparam",
    "${services_path}/common/audiodata/include",
    "${services_path}/common/audioeventcallback",
    "${audio_transport_path}/interface",
    "${audio_transport_path}/audiochannel/interface",
    "${audio_transport_path}/audiochannel/audiodatachannel/include",
    "${audio_transport_path}/encodetransport/include",
    "${audio_transport_path}/decodetransport/include",
    "${audio_transport_path}/audioctrltransport/include",
    "${audio_transport_path}/audioctrltransport/interface",
    "${audio_processor_path}/interface",
    "${audio_processor_path}/decodeprocessor/include",
    "${audio_processor_path}/encodeprocessor/include",
  ]

  sources = [
    "src/daudio_sink_dev.cpp",
    "src/daudio_sink_manager.cpp",
  ]

  deps = [
    "${audio_client_path}/micclient:dmic_client",
    "${audio_client_path}/spkclient:dspeaker_client",
    "${audio_control_path}/controlsink:distributed_audio_sink_ctrl",
    "${common_path}:distributed_audio_utils",
    "${services_path}/common:distributed_audio_service_common",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004100",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_audio"
}
