# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

ohos_shared_library("distributed_audio_manager_source") {
    include_dirs = [
        "//utils/native/base/include",
        "//third_party/json/include",
        "//foundation/communication/dsoftbus/interfaces/kits/transport",
        "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
        "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter",
        "${fwk_common_path}/utils/include",
    ]

    include_dirs += [
        "include",
        "${common_path}/include",
        "${common_path}/dfx_utils/include",
        "${audio_control_path}/controlsource/include",
        "${audio_hdi_proxy_path}/include",
        "${services_path}/common/audioparam",
        "${services_path}/common/taskProcessor/include",
        "${services_path}/common/audioeventcallback",
        "${services_path}/common/audiodata/include",
        "${audio_transport_path}/interface",
        "${audio_transport_path}/audioctrltransport/include",
        "${audio_transport_path}/audioctrltransport/interface",
        "${audio_transport_path}/audio_channel/include",
        "${audio_transport_path}/audiodatachannel/include",
        "${audio_transport_path}/encodetransport/include",
        "${audio_transport_path}/decodetransport/include",
        "${audio_processor_path}/interface",
        "${audio_processor_path}/encodeprocessor/include",
        "${audio_processor_path}/decodeprocessor/include",
        "${innerkits_path}/native_cpp/audio_source/include",
        "${innerkits_path}/native_cpp/audio_sink/include",
        "${softbusadapter_path}/include",
    ]

    sources = [
        "src/dmic_dev.cpp",
        "src/dspeaker_dev.cpp",
        "src/daudio_source_dev.cpp",
        "src/daudio_source_manager.cpp",
        "src/daudio_source_mgr_callback.cpp",
    ]

    deps = [
        "//utils/native/base:utils",
        "${common_path}:distributed_audio_utils",
        "${audio_hdi_proxy_path}:distributed_audio_hdi_proxy",
        "${services_path}/common:distributed_audio_service_common",
        "${audio_control_path}/controlsource:distributed_audio_source_ctrl",
        "${audio_transport_path}/decodetransport:distributed_audio_decode_transport",
        "${audio_transport_path}/encodetransport:distributed_audio_encode_transport",
        "${hdf_interfaces_path}/audioext/v1_0:libdaudioext_proxy_1.0",
    ]

    external_deps = [
        "ipc:ipc_core",
        "ipc:ipc_single",
        "utils_base:utils",
        "safwk:system_ability_fwk",
        "samgr:samgr_proxy",
        "hiviewdfx_hilog_native:libhilog",
        "hitrace_native:hitrace_meter",
    ]

    defines = [
        "HI_LOG_ENABLE",
        "DH_LOG_TAG=\"daudioManagerSource\"",
        "LOG_DOMAIN=0xD004100",
    ]

    subsystem_name = "distributedhardware"

    part_name = "distributed_audio"
}