# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

ohos_shared_library("distributed_audio_sink") {
    include_dirs = [
        "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
        "//utils/native/base/include",
        "${fwk_common_path}/utils/include",
        "${common_path}/dfx_utils/include",
        "${common_path}/include",
        "//utils/system/safwk/native/include",
        "${interfaces_path}/inner_kits/native_cpp/audio_sink/include",
        "${interfaces_path}/inner_kits/native_cpp/audio_source/include",
        "include",
        "${services_path}/audiomanager/managersink/include",
        "${services_path}/audiocontrol/controlsink/include",
        "${services_path}/audioclient/micclient/include",
        "${services_path}/audioclient/spkclient/include",
        "${services_path}/common/taskProcessor/include",
        "${services_path}/common/audioparam",
        "${services_path}/common/audioeventcallback",
        "//third_party/json/include",
        "${distributedaudio_path}/interfaces/inner_kits/native_cpp/audio_source/include",
        "${services_path}/audiotransport/audioctrltransport/include",
        "${services_path}/audiotransport/audioctrltransport/interface",
        "${services_path}/audiotransport/interface",
        "${services_path}/audioclient/transport/include",
        "${services_path}/audiotransport/encodetransport/include",
        "${services_path}/audiotransport/decodetransport/include",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocapturer/include",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
        "//foundation/distributedhardware/distributed_audio/services/audiotransport/encodetransport/include",
        "//foundation/distributedhardware/distributed_audio/common/include",
        "//foundation/distributedhardware/distributed_audio/services/audioclient/micclient/include",
        "//foundation/distributedhardware/distributed_audio/services/common/audiodata/include",
        "//foundation/distributedhardware/distributed_audio/services/audiotransport/encodetransport/includ",
        "//foundation/distributedhardware/distributed_audio/services/audiotransport/interface",
        "//foundation/distributedhardware/distributed_audio/services/common/audioeventcallback",
        "//foundation/distributedhardware/distributed_audio/services/audiotransport/audio_channel/include",
        "${services_path}/common/audiodata/include",
        "${services_path}/audiotransport/audio_channel/include",
        "${services_path}/audiotransport/audiodatachannel/include",
        "${services_path}/audioprocessor/encodeprocessor/include",
        "${services_path}/audioprocessor/interface",
        "${softbusadapter_path}/include",
        "//foundation/distributedhardware/distributed_audio/services/audioclient/spkclient/include",
        "//foundation/distributedhardware/distributed_audio/services/common/audioparam",
        "//foundation/distributedhardware/distributed_audio/services/audiotransport/decodetransport/include",
        "${services_path}/audioprocessor/decodeprocessor/include",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiorenderer/include",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiomanager/include",
        "//foundation/communication/dsoftbus/interfaces/kits/transport",
    ]

    sources = [
        "src/daudio_sink_service.cpp",
        "src/daudio_sink_stub.cpp",
        "${interfaces_path}/inner_kits/native_cpp/audio_sink/src/daudio_sink_proxy.cpp",
        "${interfaces_path}/inner_kits/native_cpp/audio_source/src/daudio_source_proxy.cpp",
    ]

    deps = [
        "//utils/native/base:utils",
        "${common_path}:distributed_audio_utils",
        "//foundation/distributedhardware/distributed_audio/services/audiotransport/decodetransport:distributed_audio_decode_transport",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiomanager:audio_client",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiorenderer:audio_renderer",
        "//foundation/distributedhardware/distributed_audio/common:distributed_audio_utils",
        "//foundation/distributedhardware/distributed_audio/services/audiomanager/managersink:distributed_audio_manager_sink",
    ]

    external_deps = [
        "hiviewdfx_hilog_native:libhilog",
        "ipc:ipc_core",
        "safwk:system_ability_fwk",
        "samgr_standard:samgr_proxy",
    ]

    defines = [
        "HI_LOG_ENABLE",
        "DH_LOG_TAG=\"daudiosink\"",
        "LOG_DOMAIN=0xD004100",
    ]

    subsystem_name = "distributedhardware"

    part_name = "distributed_audio"
}