# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

ohos_shared_library("distributed_audio_source") {
    include_dirs = [
        "include",
        "//third_party/json/include",
        "//utils/native/base/include",
        "//utils/system/safwk/native/include",
        "//foundation/communication/dsoftbus/interfaces/kits/transport",
        "${common_path}/include",
        "${fwk_common_path}/utils/include",
        "${interfaces_path}/inner_kits/native_cpp/audio_sink/include",
        "${interfaces_path}/inner_kits/native_cpp/audio_source/include",
        "${softbusadapter_path}/include",
        "${services_path}/audiomanager/managersource/include",
        "${services_path}/audiocontrol/controlsource/include",
        "${services_path}/common/audioparam",
        "${services_path}/common/taskProcessor/include",
        "${services_path}/audiohdiproxy/include",
        "${services_path}/audiotransport/interface",
        "${services_path}/audiotransport/include",
        "${services_path}/audiotransport/encodetransport/include",
        "${services_path}/audiotransport/decodetransport/include",
        "${services_path}/common/audioeventcallback",
        "${services_path}/audiotransport/audioctrltransport/include",
        "${services_path}/audiotransport/audioctrltransport/interface",
        "${services_path}/audioclient/transport/include",
        "${services_path}/audiotransport/audio_channel/include",
        "${services_path}/common/audiodata/include",
        "${services_path}/audiotransport/audiodatachannel/include",
        "${services_path}/audioprocessor/interface",
        "${services_path}/audioprocessor/encodeprocessor/include",
        "${services_path}/audioprocessor/decodeprocessor/include",
    ]

    sources = [
        "src/daudio_ipc_callback_proxy.cpp",
        "src/daudio_source_service.cpp",
        "src/daudio_source_stub.cpp",
        "${interfaces_path}/inner_kits/native_cpp/audio_sink/src/daudio_sink_proxy.cpp",
        "${interfaces_path}/inner_kits/native_cpp/audio_source/src/daudio_source_proxy.cpp",
    ]

    deps = [
        "//utils/native/base:utils",
        "${common_path}:distributed_audio_utils",
        "//foundation/distributedhardware/distributed_audio/services/common:distributed_audio_service_common",
        "//foundation/distributedhardware/distributed_audio/hdf_interfaces/distributed_audio/audioext/v1_0:libdaudioext_proxy_1.0",
        "//foundation/distributedhardware/distributed_audio/services/audiomanager/managersource:distributed_audio_manager_source",
    ]

    external_deps = [
        "hiviewdfx_hilog_native:libhilog",
        "ipc:ipc_core",
        "safwk:system_ability_fwk",
        "samgr_standard:samgr_proxy",
    ]

    defines = [
        "HI_LOG_ENABLE",
        "DH_LOG_TAG=\"daudiosource\"",
        "LOG_DOMAIN=0xD004100",
    ]

    subsystem_name = "distributedhardware"
    part_name = "distributed_audio"
}