# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

ohos_shared_library("distributed_audio_source") {
  include_dirs = [
    "//third_party/json/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//drivers/peripheral/audio/interfaces/include",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "${fwk_common_path}/utils/include",
    "${mediastandardfwk_path}/audiocapturer/include",
    "${mediastandardfwk_path}/audiomanager/include",
    "${mediastandardfwk_path}/audiocommon/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${common_path}/dfx_utils/include",
    "${softbusadapter_path}/include",
    "${audio_hdi_proxy_path}/include",
    "${audio_control_path}/controlsource/include",
    "${services_path}/common/audioparam",
    "${services_path}/common/taskProcessor/include",
    "${services_path}/common/audiodata/include",
    "${services_path}/common/audioeventcallback",
    "${services_path}/audiomanager/managersource/include",
    "${audio_transport_path}/interface",
    "${audio_transport_path}/encodetransport/include",
    "${audio_transport_path}/decodetransport/include",
    "${audio_transport_path}/audioctrltransport/include",
    "${audio_transport_path}/audioctrltransport/interface",
    "${audio_transport_path}/audiochannel/interface",
    "${audio_transport_path}/audiochannel/audiodatachannel/include",
    "${audio_processor_path}/interface",
    "${audio_processor_path}/encodeprocessor/include",
    "${audio_processor_path}/decodeprocessor/include",
    "${distributedaudio_path}/audiohandler/include",
    "${interfaces_path}/inner_kits/native_cpp/audio_sink/include",
    "${interfaces_path}/inner_kits/native_cpp/audio_source/include",
    "${hdf_service_path}/audio_client/include",
    "${hdf_service_path}/hdi_service/common/include",
  ]

  sources = [
    "${common_path}/dfx_utils/src/daudio_hidumper.cpp",
    "${interfaces_path}/inner_kits/native_cpp/audio_sink/src/daudio_sink_proxy.cpp",
    "${interfaces_path}/inner_kits/native_cpp/audio_source/src/daudio_source_proxy.cpp",
    "src/daudio_ipc_callback_proxy.cpp",
    "src/daudio_source_service.cpp",
    "src/daudio_source_stub.cpp",
  ]

  deps = [
    "${common_path}:distributed_audio_utils",
    "${distributedaudio_path}/audiohandler:distributed_audio_handler",
    "${hdf_interfaces_path}/audioext/v1_0:libdaudioext_proxy_1.0",
    "${hdf_service_path}/audio_client:daudio_client",
    "${services_path}/audiomanager/managersource:distributed_audio_manager_source",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004100",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_audio"
}
