# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

ohos_shared_library("distributed_audio_encode_transport") {
  include_dirs = [
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "${fwk_common_path}/utils/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${services_path}/common/audioparam",
    "${services_path}/common/audiodata/include",
    "${audio_transport_path}/audio_channel/include",
    "${audio_transport_path}/audiodatachannel/include",
    "${audio_transport_path}/interface",
    "${audio_processor_path}/encodeprocessor/include",
    "${audio_processor_path}/interface",
    "${softbusadapter_path}/include",
  ]

  sources = [ "src/audio_encode_transport.cpp" ]

  external_deps = [ "c_utils:utils" ]
  deps = [
    "${audio_processor_path}/encodeprocessor:distributed_audio_encoder_processor",
    "${audio_transport_path}/audiodatachannel:distributed_audio_data_channel",
    "${common_path}:distributed_audio_utils",
    "${services_path}/common:distributed_audio_service_common",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"daudio_encodetransport\"",
    "LOG_DOMAIN=0xD004100",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_audio"
}
