# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

ohos_shared_library("distributed_audio_sink_sdk") {
    include_dirs = [
        "//utils/native/base/include",
        "${common_path}/include",
        "${fwk_common_path}/utils/include",
        "include",
    ]

    sources = [
        "src/daudio_sink_handler.cpp",
        "src/daudio_sink_load_callback.cpp",
        "src/daudio_sink_proxy.cpp",
    ]

    deps = [
        "//utils/native/base:utils",
        "${common_path}:distributed_audio_utils",
    ]

    external_deps = [
        "hiviewdfx_hilog_native:libhilog",
        "ipc:ipc_core",
        "safwk:system_ability_fwk",
        "samgr_standard:samgr_proxy",
    ]

    defines = [
        "HI_LOG_ENABLE",
        "DH_LOG_TAG=\"daudiosinksdk\"",
        "LOG_DOMAIN=0xD004100",
    ]

    subsystem_name = "distributedhardware"

    part_name = "distributed_audio"
}