# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

ohos_shared_library("libaudio_manager_daudio_primary_service_1.0") {
  include_dirs = [
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/audio/v1_0/include",
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/common/include",
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/common/log/include",
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/common/utils/include",
  ]
  sources = [
    "./src/audio_adapter_interface_impl.cpp",
    "./src/audio_manager_interface_impl.cpp",
    "./src/audio_render_interface_impl.cpp",
    "./src/audio_capture_interface_impl.cpp",
  ]
  public_deps = [
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/common:libdaudio_hdf_utils",
    "//foundation/distributedhardware/distributed_audio/hdf_interfaces/distributed_audio/audio/v1_0:libdaudio_stub_1.0",
    "//foundation/distributedhardware/distributed_audio/hdf_interfaces/distributed_audio/audioext/v1_0:libdaudioext_stub_1.0"
  ]
  external_deps = [
    "hdf_core:libhdf_utils",
    "hdf_core:libhdf_host",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "utils_base:utils",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"daudioHDF\"",
    "LOG_DOMAIN=0xD004100",
  ]

  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_distributed_audio"
}

ohos_shared_library("libdaudio_primary_driver") {
  include_dirs = [
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/audio/v1_0/include",
  ]
  sources = [ "./src/audio_driver.cpp" ]
  deps = [ "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/audio/v1_0:libaudio_manager_daudio_primary_service_1.0" ]

  external_deps = [
    "hdf_core:libhdf_host",
    "hdf_core:libhdf_ipc_adapter",
    "hdf_core:libhdf_utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "utils_base:utils",
  ]

  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_distributed_audio"
}

group("hdf_daudio_primary_service") {
  deps = [
    ":libdaudio_primary_driver",
    ":libaudio_manager_daudio_primary_service_1.0",
  ]
}